<resources>
    <string name="app_name">Calculator</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="positiveNegative">+/-</string>
    <string name="parenthesis">()</string>
    <string name="exponential">^</string>

</resources>