<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1pt"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="top|center"
        android:textColor="@color/black"
        android:textSize="20pt"
        android:inputType="textPersonName"
        android:hint="Ingrese un Valor" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnC"
                android:text="@string/clear"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:onClick="clearEvent"
                ></Button>
            <Button
                android:id="@+id/btnParen"
                android:text="@string/parenthesis"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnExpon"
                android:text="@string/exponential"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnDivide"
                android:text="@string/div"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnSeven"
                android:text="@string/_7"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnEight"
                android:text="@string/_8"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnNine"
                android:text="@string/_9"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnMultiply"
                android:text="@string/multiply"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnFour"
                android:text="@string/_4"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:textColor="@color/white"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnFive"
                android:text="@string/_5"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnSix"
                android:text="@string/_6"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"></Button>
            <Button
                android:id="@+id/btnMinus"
                android:text="@string/minus"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:onClick="operatorEvent"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnOne"
                android:text="@string/one"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnTwo"
                android:text="@string/two"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnThree"
                android:text="@string/three"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                ></Button>
            <Button
                android:id="@+id/btnPlus"
                android:text="@string/plus"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">
            <Button
                android:id="@+id/btnAC"
                android:text="@string/positiveNegative"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnZero"
                android:text="@string/zero"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                ></Button>
            <Button
                android:id="@+id/btnDot"
                android:text="."
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                ></Button>
            <Button
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="equalEvent"
                android:textColor="@color/white"
                android:layout_width="30pt"
                ></Button>
        </TableRow>
    </TableLayout>
</LinearLayout>